provisioning/remla-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend/()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - path: /(frontend/)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
      - path: /model/()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: model-service
            port:
              number: 5000
      - path: /prometheus/()(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
      - path: /grafana/()(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /dashboard/()(.*)
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-web
            port:
              number: 8000
